--- a/src/Mindbite.Mox.Identity/Resources/Localization.resx
+++ b/src/Mindbite.Mox.Identity/Resources/Localization.resx
@@ -126,4 +126,10 @@
   <data name="role_Mox" xml:space="preserve">
     <value>Logga in i Mox</value>
   </data>
+  <data name="The {0} field is not a valid e-mail address." xml:space="preserve">
+    <value>Ange en giltig e-post</value>
+  </data>
+  <data name="{0} is required" xml:space="preserve">
+    <value>Obligatorisk</value>
+  </data>
 </root>
